@@ -9,8 +9,7 @@ commands=echo {posargs}
 
 [testenv]
 commands=py.test --junitxml={envlogdir}/junit-{envname}.xml {posargs}
-deps=pytest
-     py
+deps=pytest==2.3.2
 
 [testenv:docs]
 basepython=python
